2792 - use pagination for fetching, ensuring all items are retrieved